--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,17 +1,7 @@
 <header class="hero-header" id="hero-header"">
     <title>Ice cream made with passion</title>
-    <section class="hero-header__top header-top">
-        <div class="header-top__logo">
-            <img class="header-top__img" src="../src/images/logo 1.png" srcset="../src/images/logox2.png 2x">
-        </div>
-        <ul class="hero-header__menu header-menu">
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#hero-header">Home</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#about">About us</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#how">How it's made?</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#products">Our products</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#contacts">Contact</a></li>
-        </ul>
-        <!-- hamburger menu -->
+    <section class="menu-mobile">
+    <!-- hamburger menu -->
         <div class="nav-container" tabindex="0">
             <div class="nav-toggle"></div>
             <ul class="nav-items">
@@ -25,6 +15,18 @@
             </ul>
         </div>
         <!-- hamburger menu -->
+    </section>
+    <section class="hero-header__top header-top">
+        <div class="header-top__logo">
+            <img class="header-top__img" src="../src/images/logo 1.png" srcset="../src/images/logox2.png 2x">
+        </div>
+        <ul class="hero-header__menu header-menu">
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#hero-header">Home</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#about">About us</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#how">How it's made?</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#products">Our products</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#contacts">Contact</a></li>
+        </ul>
         <button class="header-top__buy"><a class="header-top__buylink" href="#">Buy now &gt;</a></button>
         <!-- topic -->
     </section>
