--- a/src/sass/_hamburger/_hamburger.scss
+++ b/src/sass/_hamburger/_hamburger.scss
@@ -1,10 +1,24 @@
+.menu-mobile {
+    display: flex;
+    justify-content: end;
+    position: absolute;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 .nav-container {
-    position: relative;
-    display: inline-block;
+   
+    position: absolute;
+    top: 20;
+    left: 100;
     width: 40px;
     height: 62px;
     overflow: visible;
     outline: none;
+    
 
     &.is-active {
         .nav-toggle {
@@ -32,7 +46,10 @@
     }
 
    .nav-toggle {
-       position: relative;
+       /*position: relative;*/
+       position: absolute;
+       top: 20;
+       right: 20;
        width: 20px;
        height: 20px;
        margin-top: 25px;
@@ -65,8 +82,7 @@
        }
    }
     .nav-items {
-        position: absolute;
-        display: none;
+       position: absolute;
         top: 0;
         right: 0;
         width: 250px;
