--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -490,6 +490,8 @@
 // header images //
 .hero-header__images {
     width: 100%;
+    height: 100%;
+    overflow: hidden;
     position: absolute;
 }
 
