--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -38,7 +38,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 .container {
@@ -63,9 +63,21 @@ body {
   }
 }
 
+.menu-mobile {
+  display: flex;
+  justify-content: end;
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 .nav-container {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  top: 20;
+  left: 100;
   width: 40px;
   height: 62px;
   overflow: visible;
@@ -87,7 +99,10 @@ body {
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
 }
 .nav-container .nav-toggle {
-  position: relative;
+  /*position: relative;*/
+  position: absolute;
+  top: 20;
+  right: 20;
   width: 20px;
   height: 20px;
   margin-top: 25px;
@@ -116,7 +131,6 @@ body {
 }
 .nav-container .nav-items {
   position: absolute;
-  display: none;
   top: 0;
   right: 0;
   width: 250px;
@@ -193,6 +207,7 @@ body {
 
 .nav-item__anchor:hover {
   color: #D41443;
+  transition: color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 @media screen and (min-width: 767px) {
@@ -320,6 +335,7 @@ body {
 
 .header-menu__anchor:hover {
   color: #D41443;
+  transition: color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .header-top__buy {
@@ -387,7 +403,7 @@ body {
     width: 277px;
     margin-left: 115px;
     padding-left: 0;
-    top: 150px;
+    top: 190px;
   }
 }
 .header-topic__p {
@@ -414,6 +430,7 @@ body {
     line-height: 43.51px;
     letter-spacing: 4%;
     color: #fff;
+    width: 277px;
   }
 }
 .header-topic__span {
@@ -456,7 +473,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .hero-header__buttons {
-    top: 55px;
+    top: 0px;
     left: 95px;
   }
 }
@@ -485,6 +502,7 @@ body {
 }
 .hero-button__product:hover {
   background: #D41443;
+  transition: background-color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .hero-button__how {
@@ -496,7 +514,7 @@ body {
   z-index: 903;
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .hero-button__how {
     width: 138px;
     height: 40px;
@@ -504,6 +522,7 @@ body {
 }
 .hero-button__how:hover {
   background: #D41443;
+  transition: background-color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .hero-button__link {
@@ -530,6 +549,7 @@ body {
 }
 .hero-button__link:hover {
   color: #fff;
+  transition: color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .hero-header__eat {
@@ -657,6 +677,8 @@ body {
 }
 .hero-header__images {
   width: 100%;
+  height: 100%;
+  overflow: hidden;
   position: absolute;
 }
 
@@ -774,7 +796,7 @@ body {
 @media screen and (min-width: 1200px) {
   .header-span__arrow {
     top: 525px;
-    margin-left: 60px;
+    margin-left: 20px;
   }
 }
 .hero-header__tastydiv {
@@ -848,9 +870,21 @@ body {
     line-height: 140%;
   }
 }
+.menu-mobile {
+  display: flex;
+  justify-content: end;
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 .nav-container {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  top: 20;
+  left: 100;
   width: 40px;
   height: 62px;
   overflow: visible;
@@ -872,7 +906,10 @@ body {
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
 }
 .nav-container .nav-toggle {
-  position: relative;
+  /*position: relative;*/
+  position: absolute;
+  top: 20;
+  right: 20;
   width: 20px;
   height: 20px;
   margin-top: 25px;
@@ -901,7 +938,6 @@ body {
 }
 .nav-container .nav-items {
   position: absolute;
-  display: none;
   top: 0;
   right: 0;
   width: 250px;
@@ -978,6 +1014,7 @@ body {
 
 .nav-item__anchor:hover {
   color: #D41443;
+  transition: color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 @media screen and (min-width: 767px) {
@@ -1937,13 +1974,13 @@ body {
   background-color: #d41342;
   color: #ffffff;
 }
+.localisation-buttons__button:hover .localisation-buttons__icon, .localisation-buttons__button:focus .localisation-buttons__icon {
+  fill: #ffffff;
+}
 .localisation-buttons__icon {
   fill: #d41443;
   margin-left: 13.5px;
   transition: fill 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-.localisation-buttons__icon:hover, .localisation-buttons__icon:focus {
-  fill: #ffffff;
 }
 
 @media screen and (max-width: 767px) {
