--- a/src/sass/_hamburger/_hamburger.scss
+++ b/src/sass/_hamburger/_hamburger.scss
@@ -1,6 +1,6 @@
 .menu-mobile {
-    display: flex;
-    justify-content: end;
+   /* display: flex;
+    justify-content: end;*/
     position: absolute;
     top: 0;
     right: 0;
@@ -12,9 +12,9 @@
 .nav-container {
    
     position: absolute;
+
     top: 20;
-    left: 100;
-    width: 40px;
+    width: 100%;
     height: 62px;
     overflow: visible;
     outline: none;
@@ -47,9 +47,8 @@
 
    .nav-toggle {
        /*position: relative;*/
-       position: absolute;
-       top: 20;
-       right: 20;
+       position: absolute;   
+       right: 0;   
        width: 20px;
        height: 20px;
        margin-top: 25px;
