--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -64,8 +64,8 @@ body {
 }
 
 .menu-mobile {
-  display: flex;
-  justify-content: end;
+  /* display: flex;
+   justify-content: end;*/
   position: absolute;
   top: 0;
   right: 0;
@@ -77,8 +77,7 @@ body {
 .nav-container {
   position: absolute;
   top: 20;
-  left: 100;
-  width: 40px;
+  width: 100%;
   height: 62px;
   overflow: visible;
   outline: none;
@@ -101,8 +100,7 @@ body {
 .nav-container .nav-toggle {
   /*position: relative;*/
   position: absolute;
-  top: 20;
-  right: 20;
+  right: 0;
   width: 20px;
   height: 20px;
   margin-top: 25px;
@@ -871,8 +869,8 @@ body {
   }
 }
 .menu-mobile {
-  display: flex;
-  justify-content: end;
+  /* display: flex;
+   justify-content: end;*/
   position: absolute;
   top: 0;
   right: 0;
@@ -884,8 +882,7 @@ body {
 .nav-container {
   position: absolute;
   top: 20;
-  left: 100;
-  width: 40px;
+  width: 100%;
   height: 62px;
   overflow: visible;
   outline: none;
@@ -908,8 +905,7 @@ body {
 .nav-container .nav-toggle {
   /*position: relative;*/
   position: absolute;
-  top: 20;
-  right: 20;
+  right: 0;
   width: 20px;
   height: 20px;
   margin-top: 25px;
