--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -97,7 +97,8 @@ body {
   transform: translate(0, 0);
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
 }
-.nav-container .nav-toggle {
+
+.nav-toggle {
   /*position: relative;*/
   position: absolute;
   right: 0;
@@ -107,10 +108,10 @@ body {
   margin-right: 20px;
   z-index: 1001;
 }
-.nav-container .nav-toggle:hover {
+.nav-toggle:hover {
   cursor: pointer;
 }
-.nav-container .nav-toggle:before, .nav-container .nav-toggle:after {
+.nav-toggle:before, .nav-toggle:after {
   content: "";
   position: absolute;
   top: 6px;
@@ -121,13 +122,14 @@ body {
   background: red;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.nav-container .nav-toggle:before {
+.nav-toggle:before {
   box-shadow: 0 6px 0 0 red;
 }
-.nav-container .nav-toggle:after {
+.nav-toggle:after {
   box-shadow: 0 -6px 0 0 red;
 }
-.nav-container .nav-items {
+
+.nav-items {
   position: absolute;
   top: 0;
   right: 0;
@@ -143,12 +145,12 @@ body {
   grid-gap: 5px 0;
   align-content: start;
 }
-.nav-container .nav-items .nav-item {
+.nav-items .nav-item {
   background: #E18298;
   padding: 10px;
   transition: background-color 0.3s ease;
 }
-.nav-container .nav-items .nav-item:hover {
+.nav-items .nav-item:hover {
   background: #E18298;
 }
 
@@ -209,28 +211,16 @@ body {
 }
 
 @media screen and (min-width: 767px) {
-  .nav-container {
-    margin-right: 215px;
-    padding-top: 26px;
-  }
   .nav-container.is-active .nav-toggle {
-    position: absolute;
-    left: 200px;
-    top: -5px;
-  }
-  .nav-items {
-    top: 0;
-    left: 20px;
-    width: 254px;
-    height: 100vh;
-    z-index: 1000;
+    margin-top: 20px;
+    margin-right: 20px;
   }
   .nav-toggle {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    margin-top: 50px;
-    margin-right: 20px;
+    margin-top: 53px;
+    margin-right: 224px;
+  }
+  .nav-items {
+    width: 254px;
   }
   .nav-items__button {
     width: 155px;
@@ -902,7 +892,8 @@ body {
   transform: translate(0, 0);
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
 }
-.nav-container .nav-toggle {
+
+.nav-toggle {
   /*position: relative;*/
   position: absolute;
   right: 0;
@@ -912,10 +903,10 @@ body {
   margin-right: 20px;
   z-index: 1001;
 }
-.nav-container .nav-toggle:hover {
+.nav-toggle:hover {
   cursor: pointer;
 }
-.nav-container .nav-toggle:before, .nav-container .nav-toggle:after {
+.nav-toggle:before, .nav-toggle:after {
   content: "";
   position: absolute;
   top: 6px;
@@ -926,13 +917,14 @@ body {
   background: red;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.nav-container .nav-toggle:before {
+.nav-toggle:before {
   box-shadow: 0 6px 0 0 red;
 }
-.nav-container .nav-toggle:after {
+.nav-toggle:after {
   box-shadow: 0 -6px 0 0 red;
 }
-.nav-container .nav-items {
+
+.nav-items {
   position: absolute;
   top: 0;
   right: 0;
@@ -948,12 +940,12 @@ body {
   grid-gap: 5px 0;
   align-content: start;
 }
-.nav-container .nav-items .nav-item {
+.nav-items .nav-item {
   background: #E18298;
   padding: 10px;
   transition: background-color 0.3s ease;
 }
-.nav-container .nav-items .nav-item:hover {
+.nav-items .nav-item:hover {
   background: #E18298;
 }
 
@@ -1014,28 +1006,16 @@ body {
 }
 
 @media screen and (min-width: 767px) {
-  .nav-container {
-    margin-right: 215px;
-    padding-top: 26px;
-  }
   .nav-container.is-active .nav-toggle {
-    position: absolute;
-    left: 200px;
-    top: -5px;
-  }
-  .nav-items {
-    top: 0;
-    left: 20px;
-    width: 254px;
-    height: 100vh;
-    z-index: 1000;
+    margin-top: 20px;
+    margin-right: 20px;
   }
   .nav-toggle {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    margin-top: 50px;
-    margin-right: 20px;
+    margin-top: 53px;
+    margin-right: 224px;
+  }
+  .nav-items {
+    width: 254px;
   }
   .nav-items__button {
     width: 155px;
