--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -256,6 +256,7 @@
 
 @media screen and(min-width: 1200px) {
     .hero-header__buttons {
+        max-width: 400px;
         top: 0px;
         left: 95px;
     }
