--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -248,6 +248,7 @@
 
 @media screen and(min-width: 767px) {
     .hero-header__buttons {
+        max-width: 400px;
         bottom: 65px;
         margin-top: 40px;
         margin-bottom: 50px;
