--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -453,6 +453,7 @@ body {
 
 @media screen and (min-width: 767px) {
   .hero-header__buttons {
+    max-width: 400px;
     bottom: 65px;
     margin-top: 40px;
     margin-bottom: 50px;
@@ -1577,7 +1578,7 @@ body {
   content: "";
   position: absolute;
   bottom: -48px;
-  left: 39%;
+  left: 45%;
   width: 32px;
   height: 4px;
   background-image: url(../images/slider/dots.svg);
