--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -115,12 +115,19 @@
         background-color: #fff;
         border: none;
         margin-right: 34px;
-
         position: absolute;
         top: 38px;
         right: 1%;
         z-index: 900;
         cursor: pointer;
+        transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
+                color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+        
+            &:hover,
+            &:focus {
+                background-color: #d41342;
+                color: #ffffff;
+            }
     }
 }
 
@@ -149,6 +156,14 @@
         line-height: 21px;
         letter-spacing: 0.04em;
         text-decoration: none;
+        transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
+                color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+        
+            &:hover,
+            &:focus {
+                color: #ffffff;
+            }
+        
     }
 }
 
