--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -343,6 +343,11 @@ body {
     right: 1%;
     z-index: 900;
     cursor: pointer;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+  .header-top__buy:hover, .header-top__buy:focus {
+    background-color: #d41342;
+    color: #ffffff;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -369,6 +374,10 @@ body {
     line-height: 21px;
     letter-spacing: 0.04em;
     text-decoration: none;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+  .header-top__buylink:hover, .header-top__buylink:focus {
+    color: #ffffff;
   }
 }
 .hero-header__topic {
@@ -1300,6 +1309,11 @@ body {
   padding-right: 56px;
   margin-right: auto;
   cursor: pointer;
+  transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.about__button:hover, .about__button:focus {
+  background-color: #d41342;
+  color: #ffffff;
 }
 
 .about__milk {
