--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 @import './general/general-styles';
 @import './base/container';
 
-@import './_hamburger/hamburger';
+@import './hamburger/hamburger';
 @import './header-hero';
 @import './_hamburger/hamburger';
 
