--- a/src/sass/hamburger/_hamburger.scss
+++ b/src/sass/hamburger/_hamburger.scss
@@ -45,7 +45,6 @@
     }
 }
    .nav-toggle {
-       /*position: relative;*/
        position: absolute;   
        right: 0;   
        width: 20px;
@@ -121,6 +120,13 @@
     align-items: center;
     align-content: center;
     cursor: pointer;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
+            color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    
+        &:hover,
+        &:focus {
+            background-color: #d41342;
+        }
 }
 
 .nav-items__buy {
@@ -135,6 +141,14 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    cursor: pointer;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
+            color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    
+        &:hover,
+        &:focus {
+            color: #ffffff;
+        }
 }
 
 .nav-items__marker {
