--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -98,14 +98,13 @@ body {
 }
 
 .nav-toggle {
-  /*position: relative;*/
   position: absolute;
   right: 0;
   width: 20px;
   height: 20px;
   margin-top: 25px;
   margin-right: 20px;
-  z-index: 1001;
+  z-index: 3002;
 }
 .nav-toggle:hover {
   cursor: pointer;
@@ -134,7 +133,7 @@ body {
   right: 0;
   width: 250px;
   height: 100vh;
-  z-index: 1000;
+  z-index: 3001;
   padding: 80px 20px 20px 10px;
   transition: transform 0.3s ease;
   transform: translate(100%, 0);
@@ -165,6 +164,10 @@ body {
   align-items: center;
   align-content: center;
   cursor: pointer;
+  transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.nav-items__button:hover, .nav-items__button:focus {
+  background-color: #d41342;
 }
 
 .nav-items__buy {
@@ -179,6 +182,11 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
+  cursor: pointer;
+  transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.nav-items__buy:hover, .nav-items__buy:focus {
+  color: #ffffff;
 }
 
 .nav-items__marker {
@@ -222,10 +230,9 @@ body {
     width: 254px;
   }
   .nav-items__button {
-    width: 155px;
+    width: 186px;
     height: 44px;
-    margin-left: 25px;
-    margin-bottom: 20px;
+    margin-left: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -341,7 +348,7 @@ body {
     position: absolute;
     top: 38px;
     right: 1%;
-    z-index: 900;
+    z-index: 2001;
     cursor: pointer;
     transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
   }
@@ -866,177 +873,6 @@ body {
     height: 78px;
     font-size: 14px;
     line-height: 140%;
-  }
-}
-.menu-mobile {
-  /* display: flex;
-   justify-content: end;*/
-  position: absolute;
-  top: 0;
-  right: 0;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-
-.nav-container {
-  position: absolute;
-  top: 20;
-  width: 100%;
-  height: 62px;
-  overflow: visible;
-  outline: none;
-}
-.nav-container.is-active .nav-toggle:before, .nav-container.is-active .nav-toggle:after {
-  box-shadow: none;
-}
-.nav-container.is-active .nav-toggle:before {
-  transform: rotate(-45deg);
-  background: white;
-}
-.nav-container.is-active .nav-toggle:after {
-  transform: rotate(45deg);
-  background: white;
-}
-.nav-container.is-active .nav-items {
-  transform: translate(0, 0);
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
-}
-
-.nav-toggle {
-  /*position: relative;*/
-  position: absolute;
-  right: 0;
-  width: 20px;
-  height: 20px;
-  margin-top: 25px;
-  margin-right: 20px;
-  z-index: 1001;
-}
-.nav-toggle:hover {
-  cursor: pointer;
-}
-.nav-toggle:before, .nav-toggle:after {
-  content: "";
-  position: absolute;
-  top: 6px;
-  right: 0;
-  transform: translate(0, 0);
-  width: 100%;
-  height: 1px;
-  background: red;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.nav-toggle:before {
-  box-shadow: 0 6px 0 0 red;
-}
-.nav-toggle:after {
-  box-shadow: 0 -6px 0 0 red;
-}
-
-.nav-items {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 250px;
-  height: 100vh;
-  z-index: 1000;
-  padding: 80px 20px 20px 10px;
-  transition: transform 0.3s ease;
-  transform: translate(100%, 0);
-  background: #E18298;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 5px 0;
-  align-content: start;
-}
-.nav-items .nav-item {
-  background: #E18298;
-  padding: 10px;
-  transition: background-color 0.3s ease;
-}
-.nav-items .nav-item:hover {
-  background: #E18298;
-}
-
-.nav-items__button {
-  width: 209px;
-  height: 44px;
-  border-radius: 22px;
-  background-color: #fff;
-  border: none;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  cursor: pointer;
-}
-
-.nav-items__buy {
-  color: #D41443;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 21px;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-}
-
-.nav-items__marker {
-  color: #D41443;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 21px;
-  text-decoration: none;
-  display: inline-block;
-  padding-left: 8px;
-}
-
-.nav-item__anchor {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 18px;
-  text-decoration: none;
-  color: #fff;
-  background-color: transparent;
-}
-
-.nav-item__anchor:hover {
-  color: #D41443;
-  transition: color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-@media screen and (min-width: 767px) {
-  .nav-container.is-active .nav-toggle {
-    margin-top: 20px;
-    margin-right: 20px;
-  }
-  .nav-toggle {
-    margin-top: 53px;
-    margin-right: 224px;
-  }
-  .nav-items {
-    width: 254px;
-  }
-  .nav-items__button {
-    width: 155px;
-    height: 44px;
-    margin-left: 25px;
-    margin-bottom: 20px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .nav-container {
-    display: none;
   }
 }
 .products-second__heading {
