zmiana buttonu w about
Zamieniłem stary button w sekcji about na button, który znajduje się w sekcji contact

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -6,8 +6,7 @@
             <li class="about__item">
                 <img class="about__img" src="imagescow-mobile-@1x-280x279.png"
                     srcset="images/cow-mobile-@1x-280x279.png 280w, images/cow-mobile-@2x-560x558.png 560w, images\cow-tablet-@1x-340x339.png 340w, images\cow-tablet-@2x-680x768.png 680w, images/cow-desktop-@1x-516x516.png 516w, images/cow-desktop-@2x-1032x1032.png 1032w"
-                    alt="cow"
-                    sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, (min-width: 200px) 280px" />
+                    alt="cow" sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, (min-width: 200px) 280px" />
             </li>
             <li class="about__item">
                 <ul class="about__list--inner">
@@ -28,22 +27,21 @@
                         </p>
                     </li class="about__item--inner">
                     <li>
-                        <button class="about__button" type="button">Read more</button>
+                        <button class="localisation-buttons__button" type="button">
+                            Read more
+                            <svg class="localisations-buttons__icon" width="5" height="8">
+                                <use href="./src/images/icons.svg#icon-button-arrow"></use>
+                            </svg>
+                        </button>
                     </li>
                 </ul>
             </li>
         </ul>
         <div>
-            <img
-            class="about__milk" src="images/milk-mobile-@1x-320x133.png"
-            alt="milk"
-            >
+            <img class="about__milk" src="images/milk-mobile-@1x-320x133.png" alt="milk">
         </div>
         <div>
-            <img
-            class="about__milk--desktop" src="images/milk-desktop-@1x-1282x534.png"
-            alt="milk"
-            >
+            <img class="about__milk--desktop" src="images/milk-desktop-@1x-1282x534.png" alt="milk">
         </div>
     </div>
 </section>
