--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,10 +3,10 @@
   <div class="advantages container">
     <ul class="advantages__list">
       <li class="advantages__item">
-        <ul>
-          <li>
+        <ul class="advantages__icon--bucket">
+          <!-- <li>
             <img src="./images/icon1bucket.png" alt="bucket" width="33" height="50" />
-          </li>
+          </li> -->
           <li class="advantages__numbers">721</li>
           <li class="advantages__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
@@ -14,15 +14,15 @@
         </ul>
       </li>
       <li class="advantages__item">
-        <ul>
-          <li>
+        <ul class="advantages__icon--apple">
+          <!-- <li>
             <img
               src="./images/icon1bucketapple.png"
               alt="bucket with apple"
               width="50"
               height="50"
             />
-          </li>
+          </li> -->
           <li class="advantages__numbers">16KG</li>
           <li class="advantages__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
@@ -30,10 +30,10 @@
         </ul>
       </li>
       <li class="advantages__item">
-        <ul>
-          <li>
+        <ul class="advantages__icon--heart">
+          <!-- <li>
             <img src="./images/icon1heart.png" alt="heart" width="44" height="50" />
-          </li>
+          </li> -->
           <li class="advantages__numbers">84</li>
           <li class="advantages__text">
             Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
