--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -7,7 +7,8 @@
 .advantages__list{
     display: block;
     margin-left: 20px;
-
+    
+    
 }
 .advantages__section{
     background-color: #FFF5F6;
@@ -23,6 +24,8 @@ text-transform: uppercase;
 color: #D41443;
 margin-bottom: 34px;
 margin-top: 16px;
+
+
 }
 .advantages__text{
 font-family: 'DM Sans';
@@ -33,7 +36,21 @@ color: #000000;
 padding-bottom: 38px;
 max-width: 230px;
 }
-
+.advantages__icon--bucket::before{
+    content: url(/images/icon1bucket.png);
+    width: 33px;
+    height: 50px;
+}
+.advantages__icon--apple::before{
+    content: url(/images/icon1bucketapple.png);
+    width: 33px;
+    height: 50px;
+}
+.advantages__icon--heart::before{
+    content: url(/images/icon1heart.png);
+    width: 33px;
+    height: 50px;
+}
 @media screen and (min-width:768px) and (max-width:1200px) {
     .advantages__list{
         display: flex;
