--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,21 +10,21 @@
       <div class="footer-elements__right-side">
         <ul class="footer-social">
           <li class="footer-social__icon">
-            <a href="https://www.facebook.com" target="_blank">
+            <a class="footer-social__link" href="https://www.facebook.com" target="_blank">
               <svg class="footer-social__media-icon" width="9" height="19">
                 <use href="images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social__icon">
-            <a href="https://telegram.org" target="_blank">
+            <a class="footer-social__link" href="https://telegram.org" target="_blank">
               <svg class="footer-social__media-icon" width="19" height="15">
                 <use href="images/icons.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social__icon">
-            <a href="https://github.com" target="_blank">
+            <a class="footer-social__link" href="https://github.com" target="_blank">
               <svg class="footer-social__media-icon" width="19" height="19">
                 <use href="images/icons.svg#icon-github"></use>
               </svg>
