--- a/src/sass/components/_footer-social-links.scss
+++ b/src/sass/components/_footer-social-links.scss
@@ -22,6 +22,11 @@
   &__media-icon {
     fill: #fff;
   }
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 @media screen and (max-width: 767px) {
   .footer-social {
