--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -147,7 +147,7 @@
 
 @media screen and(min-width: 767px) {
     .header-top__buylink {
-        display: inline-block;
+        display: flex;
         color: #D41443;
         font-family: 'DM Sans';
         font-style: normal;
@@ -158,7 +158,10 @@
         text-decoration: none;
         transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
                 color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
-        
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
             &:hover,
             &:focus {
                 color: #ffffff;
