--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,73 +1,44 @@
-<section class="container" id="products">
-    <div>
-   <h2 class="products-second__heading"> 100% NATURAL</h2>
-    <h1 class="products-first__heading "> PRODUCTS</h1>
-</div>
-<ul class="product__list">
-    <li class="product__item">
-        <div class="product-square__item --product-pink">
-            <div class="test">
-            <img class ="product-margin_pic" src="./images/pink.320px.1x.png"
-            srcset="
-            ./images/pink.320px.1x.png 450w,
-            ./images/pink.320px.2x.png 900w,
-            ./images/pink.768px.1x.png 354w,
-            ./images/pink.768px.2x.png 708w,
-            ./images/pink.1200px.1x.png 270w,
-            ./images/pink1200px2x.png 520w
-             "
-             alt="IceCreamPink"
-             sizes="(min-width: 1200px) 270px,(min-width: 768px) calc(50vw - 30px), (min-width: 320px) calc(100vw - 30px)" >
-            </div>
-        <p class="product-item__heading"><b>ICE CREAM </b></p>
-        <p class="product-item__heading"><b> ...</b></p>
-        <p class="product-item__paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-        <img class="product_radius" src="./images/strzałka.jpg">
-    <!-- </div> -->
+<section class="produscts container" id="products">
+  <div>
+    <h2 class="products-second__heading">100% NATURAL</h2>
+    <h1 class="products-first__heading">PRODUCTS</h1>
+  </div>
+  <ul class="product">
+    <li class="product__pink">
+      <h3 class="product__heading">ICE CREAM</h3>
+      <p class="product__paragraf">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et. dolore magna aliqua facilisis.
+      </p>
+      <button class="product__btn" type="button">
+        <svg class="product__icon" width="25" height="12">
+          <use href="images/icons.svg#icon-product-arrow"></use>
+        </svg>
+      </button>
     </li>
-    <li class="product__item">
-    <div class="product-square__item --product-yellow">
-        <div class="test">
-            <img class ="product-margin_pic" src="./images/yellow.320px1x.png"
-            srcset="
-            ./images/yellow.320px1x.png 450w,
-            ./images/yellow.320px2x.png 900w,
-            ./images/yellow.768px.1x.png 354w,
-            ./images/yellow.768px.2x..png 708w,
-            ./images/yellow.1200px.1x.png 270w,
-            ./images/yellow.1200px.2x.png 520w
-             "
-             alt="IceCreamPink"
-             sizes="(min-width: 1200px) 270px,(min-width: 768px) calc(50vw - 30px), (min-width: 320px) calc(100vw - 30px)" >
-            </div>
-        <p class="product-item__heading"> <b>ICE COFFE</b></p>
-        <p class="product-item__heading"><b> ...</b></p>
-        <p class="product-item__paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-        <img class="product_radius" src="./images/strzałka.jpg">
-    </div>
+    <li class="product__yellow">
+      <h3 class="product__heading">ICE CREAM</h3>
+      <p class="product__paragraf">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et. dolore magna aliqua facilisis.
+      </p>
+      <button class="product__btn" type="button">
+        <svg class="product__icon" width="25" height="12">
+          <use href="images/icons.svg#icon-product-arrow"></use>
+        </svg>
+      </button>
     </li>
-    <li class="product__item">
-    <div class="product-square__item --product-green">
-        <div class="test">
-            <img class ="product-margin_pic" src="./images/green.320px1x.png"
-            srcset="
-            ./images/green.320px1x.png 450w,
-            ./images/green.320px2x.png 900w,
-            ./images/green.768px1x.png 354w,
-            ./images/green.768px2x.png 708w,
-            ./images/green.1200px.1x.png 270w,
-            ./images/green.1200px.2x.png 520w
-             "
-             alt="IceCreamPink"
-             sizes="(min-width: 1200px) 270px,(min-width: 768px) calc(50vw - 30px), (min-width: 320px) calc(100vw - 30px)" >
-            </div>
-      <p class="product-item__heading"><b> MILKSHAKES</b></p>
-      <p class="product-item__heading"><b> ...</b></p>
-       <p class="product-item__paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-       <img class="product_radius" src="./images/strzałka.jpg">
-    </div>
+    <li class="product__green">
+      <h3 class="product__heading">ICE CREAM</h3>
+      <p class="product__paragraf">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et. dolore magna aliqua facilisis.
+      </p>
+      <button class="product__btn" type="button">
+        <svg class="product__icon" width="25" height="12">
+          <use href="images/icons.svg#icon-product-arrow"></use>
+        </svg>
+      </button>
     </li>
-</ul>
-<!-- </div> -->
-
+  </ul>
 </section>
