--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,11 +4,12 @@
   width: 100%;
 
     @media screen and (min-width: 480px) {
-         width: 480px;
+         width: 100%;
      }
 
      @media screen and (min-width: 768px) {
-         width: 768px;
+         width: 100%;
+
      }
 
     @media screen and (min-width: 1200px) {
