--- a/src/sass/products/_products-heading.scss
+++ b/src/sass/products/_products-heading.scss
@@ -1,3 +1,9 @@
+.products {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .products-second__heading {
     text-align: center;
     font-size: 18px;
@@ -18,11 +24,11 @@
 
 }
 
-.product-item__section {
+/*.product-item__section {
     padding: 1em;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
-}
+}*/
