--- a/src/sass/products/_products-list.scss
+++ b/src/sass/products/_products-list.scss
@@ -1,162 +1,351 @@
-.product-square__item {
-  width: 100%;
-  height: 485px;
-  border-radius: 24px;
-  margin-top: 143px;
-}
-.--product-pink {
-  background-color: var(--product-pink);
-}
-.--product-yellow {
-  background-color: var(--product-yellow);
-}
-.--product-green {
-  background-color: var(--product-green);
-}
-
-
-.product-foto__heading {
-  opacity: 0;
-}
-
-.product-item__heading {
-  font-family: 'Titan One';
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 22.9px;
-  letter-spacing: 4%;
-  text-align: center;
-  color: var(--text-color);
-  margin-bottom: 33px;
-}
-
-.product-item__paragraf {
-  font-family: 'DM Sans';
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 21.28px;
-  letter-spacing: 4%;
-  text-align: center;
-  color: var(--text-color);
-}
-
-.product-margin_pic {
-  margin-top: -158px;
-  padding-top: 31px;
-  // margin-left: 15px;
-  // margin-right: 15px;
-  width: 100%;
-  margin-bottom: 31px;
-}
-.test {
+.product {
   display: flex;
-  justify-content: center;
-}
-.product_radius {
-  border-radius: 50%;
-  margin-top: 41px;
-  margin-bottom: 41px;
-  margin-left: 120px;
-  margin-right: 120px;
-  display: flex;
-}
+  flex-direction: column;
+  margin-bottom: 17px;
+  padding-left: 20px;
+  padding-right: 20px;
 
-  .product__item {
-    // padding-left: 20px;
-    // padding-right: 20px;
+  &__pink {
     display: flex;
-    // width: 100%;
-    width: 280px;
-    margin:0 auto;
-  }
-
-@media screen and (min-width: 768px) {
-  .product__list {
-    display: flex;
-    justify-content: space-between;
-    width: 768px;
-    gap: 20px;
-    // margin: 0 auto;
-    // width: calc((100% - 30px) / 3);
-  }
-  .product__item{
-   width: 220px;
-  }
-  .product_radius{
-    margin: 0 auto;
-  }
-  .product-item__paragraf {
-    font-family: 'DM Sans';
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 24.64px;
-    letter-spacing: 4%;
-    text-align: center;
-    color: var(--text-color);
-    margin-bottom: 40px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .product__list {
-    display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    background-color: var(--light-pink);
     width: 100%;
-    gap: 20px;
-    // width: calc((100% - 30px) / 3);
-    // width:1200px;
-    // padding-right: 117px;
-    // padding-left: 117px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    height: 485px;
+    border-radius: 24px;
+    margin-top: 143px;
+    }
+
+  &__pink::before {
+    content: '';
+    background-image: url('../images/products/pink.320px.1x.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -113px;
+    min-width: 249px;
+    min-height: 252px;
+  
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      .product__pink::before {
+        background-image: url('../images/products/pink.320px.2x.png');
+        }
+      }
+    }
+
+  &__yellow {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--product-yellow);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    height: 485px;
+    border-radius: 24px;
+    margin-top: 143px;
+    }
+
+  &__yellow::before {
+  content: '';
+    background-image: url('../images/products/yellow.320px1x.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -113px;
+    min-width: 249px;
+    min-height: 252px;
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .product__yellow::before {
+      background-image: url('../images/products/yellow.320px2x.png');
+      }
+    }
   }
-  .product__item{
-    width: 329px;
-   }
-   .product-item__heading {
-    font-family: 'Titan One';
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 34.35px;
-    letter-spacing: 4%;
-    text-align: center;
-    color: var(--text-color);
-    margin-bottom: 33px;
-  }
-  .product-item__paragraf {
-    font-family: 'DM Sans';
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 28.16px;
-    letter-spacing: 4%;
-    text-align: center;
-    color: var(--text-color);
-    margin-bottom: 40px;
-  }
-  .product-square__item {
-    width: 350px;
-    height: 525px;
+
+  &__green {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--product-green);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    height: 485px;
     border-radius: 24px;
     margin-top: 143px;
   }
 
-  .product-item__heading {
+&__green::before {
+  content: '';
+  background-image: url('../images/products/green.320px1x.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -113px;
+  min-width: 249px;
+  min-height: 252px;
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .product__green::before {
+      background-image: url('../images/products/green.320px2x.png');
+    }
+  }
+}
+  
+  &__heading {
+    padding-top: 22px;
     font-family: 'Titan One';
     font-weight: 400;
     font-size: 20px;
-    line-height: 34.35px;
+    line-height: 22.9px;
     letter-spacing: 4%;
     text-align: center;
     color: var(--text-color);
-    margin-bottom: 32px;
   }
-  .product-margin_pic {
-    margin-top: -248px;
-    padding-top: 31px;
-    // margin-left: 15px;
-    // margin-right: 15px;
-    width: 100%;
-    margin-bottom: 31px;
+
+  &__heading::after {
+    content: '';
+    display: flex;
+    width: 26px;
+    height: 6px;
+    margin: 30px auto;
+    background-image: url(../images/products/points.svg);
+    background-repeat: no-repeat;
+  
+    @media screen and (min-width: 1280px) {
+      top: 62px;
+    }
   }
-  .product_radius{
+
+  &__paragraf {
+    display: flex;
+    margin: 0 40px;
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21.28px;
+    letter-spacing: 4%;
+    height: 120px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: var(--text-color);
+  }
+
+  &__btn {
     margin: 0 auto;
+    width: 40px;
+    height: 40px;
+    border: none;
+    padding-top: 2px;
+    padding-right: 3px;
+    border-radius: 22px;
+    background-color: var(--text-color);
+    fill: #d41342;
+    cursor: pointer;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
+      color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  
+    &:hover,
+    &:focus {
+      background-color: #d41342;
+      fill: #fff;
+    }
+  }
+
+  &__icon {
+    width: 25px;
+    height: 12x;
   }
 }
+
+@media screen and (min-width: 767px) {
+  .product {
+    flex-direction: row;
+    gap: 20px;
+    padding: 0;
+
+    &__pink{
+      width: 100%;
+      min-width: 220px;
+    }
+
+    &__pink::before {
+      min-width: 220px;
+      background-image: url('../images/products/pink.768px.1x.png');
+      @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+          .product__pink::before {
+            background-image: url('../images/products/pink.768px.2x.png');
+          }
+        }
+    }
+
+    &__yellow {
+      width: 100%;
+      min-width: 220px;
+      }
+
+    &__yellow::before {
+      min-width: 220px;
+      background-image: url('../images/products/yellow.768px.1x.png');
+    
+      @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+         .product__yellow::before {
+              background-image: url('../images/products/yellow.768px.2x.png');
+           }
+          }
+        }
+
+        &__green {
+          width: 100%;
+          min-width: 220px;
+        }
+    
+        &__green::before {
+          min-width: 220px;
+          background-image: url('../images/products/green.768px1x.png');
+    
+          @media (min-device-pixel-ratio: 2),
+          (min-resolution: 192dpi),
+          (min-resolution: 2dppx) {
+            .product__green::before {
+              background-image: url('../images/products/green.768px2x.png');
+            }
+          }
+        }
+    
+    &__paragraf {
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+}
+}
+
+@media screen and (min-width: 1200px) {
+  .product{
+    gap: 30px;
+
+  &__pink {
+    width: 100%;
+    min-width: 337px;
+    height: 525px;
+    margin-top: 259px;
+  }
+
+  &__pink::before {
+    min-width: 335px;
+    min-height: 335px;
+    margin-top: -210px;
+    background-image: url('../images/products/pink.1200px.1x.png');
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      .product__pink::before {
+        background-image: url('../images/products/pink1200px2x.png');
+      }
+    }
+  }
+
+  &__yellow {
+    width: 100%;
+    min-width: 337px;
+    height: 525px;
+    margin-top: 259px;
+  }
+
+  &__yellow::before {
+    min-width: 335px;
+    min-height: 335px;
+    margin-top: -210px;
+    background-image: url('../images/products/yellow.1200px.1x.png');
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      .product__yellow::before {
+          background-image: url('../images/products/yellow.1200px.2x.png');
+      }
+    }
+  }
+
+  &__green {
+    width: 100%;
+    min-width: 337px;
+    height: 525px;
+    margin-top: 259px;
+  }
+
+  &__green::before {
+    min-width: 335px;
+    min-height: 335px;
+    margin-top: -210px;
+    background-image: url('../images/products/green.1200px.1x.png');
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      .product__green::before {
+        background-image: url('../images/products/green.1200px.2x.png');
+      }
+    }
+  }
+
+  &__heading {
+    padding-top: 38px;
+  }
+
+  &__paragraf {
+    margin-left: 10px;
+    margin-right: 10px;
+    
+    }
+ 
+  &__paragraf {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 62px;
+  }
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
