Okno modalne/poprawki

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,4 +1,4 @@
-<section class="slick">
+<section class="slick" id="slick">
   <div class="container slick__container">
     <h2 class="slick__title visually-hidden" id="customer-reviews">
       Customer reviews Rafał Pawlak
