--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import './hamburger/hamburger';
 @import './header-hero';
+@import './menu_modal/index-modal-form';
 
 
 @import './products/_products-heading';
