--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -124,7 +124,8 @@
                 color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
         
             &:hover,
-            &:focus {
+            &:focus,
+            &:focus-within {
                 background-color: #d41342;
                 color: #ffffff;
             }
