--- a/src/sass/hamburger/_hamburger.scss
+++ b/src/sass/hamburger/_hamburger.scss
@@ -136,6 +136,8 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 21px;
+    width: 100%;
+    height: 100%;
     text-decoration: none;
     display: flex;
     justify-content: center;
