--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,9 +1,10 @@
-<section class="slick">
-  <div class="container slick__container">
+<section class="slick-slider">
+  <div class="container">
     <h2 class="slick__title visually-hidden" id="customer-reviews">
       Customer reviews Rafał Pawlak
     </h2>
-    <ul class="slick__slider">
+    <ul class="slick">
+      <!--slick__slider-->
       <li class="slick__item">
         <img
           class="slick__image"
