--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,226 +1,202 @@
-.slick__container {
+.slick-slider {
+  padding-top: 80px;
+  padding-bottom: 170px;
+  background-color: #fff;
+
   @media screen and (min-width: 768px) {
+    padding-top: 121px;
     padding-left: 40px;
     padding-right: 40px;
   }
 
   @media screen and (min-width: 1200px) {
+    padding-top: 120px;
     padding-left: 63px;
     padding-right: 61px;
   }
 }
 
 .slick {
-  padding-top: 80px;
-  padding-bottom: 170px;
-  background-color: #ffffff;
 
-  @media screen and (min-width: 768px) {
-    padding-top: 121px;
-    padding-bottom: 197px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding-top: 120px;
-    padding-bottom: 237px;
-  }
-}
-
-.slick__text {
-  position: relative;
-  z-index: 2;
-
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 2.58;
-  color: #000000;
-
-  text-align: center;
-  letter-spacing: 0.04em;
-
-  background-image: repeating-linear-gradient(to top,
-      #e1e1e1,
-      #e1e1e1 1px,
-      #fafafa 1px,
-      #fafafa 31px);
-
-  @media screen and (min-width: 768px) {
-    font-size: 14px;
-    line-height: 2.14;
-
-    background-image: repeating-linear-gradient(to top,
-        #e1e1e1,
-        #e1e1e1 1px,
-        #fafafa 1px,
-        #fafafa 30px);
-  }
-
-  @media screen and (min-width: 1200px) {
-    font-size: 16px;
-    line-height: 1.88;
-
-    background-image: repeating-linear-gradient(to top,
-        #e1e1e1,
-        #e1e1e1 1px,
-        #fafafa 1px,
-        #fafafa 30.5px);
-  }
-}
-
-.slick__text::before {
-  content: '';
-
-  position: absolute;
-  top: -14px;
-  left: -32px;
-
-  width: 54px;
-  height: 40px;
-
-  background-image: url(../images/slider/“.svg);
-
-  z-index: -1;
-
-  @media screen and (min-width: 768px) {
-    top: -16px;
-    left: -31px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    top: -14px;
-    left: -38px;
-  }
-}
-
-.slick__text::after {
-  content: '';
-
-  position: absolute;
-  bottom: -48px;
-  left: 45%;
-
-  width: 32px;
-  height: 4px;
-
-  background-image: url(../images/slider/dots.svg);
-
-  @media screen and (min-width: 768px) {
-    top: 135px;
-    left: 44%;
-  }
-
-  @media screen and (min-width: 1200px) {
-    top: 120px;
-    left: 47%;
-  }
-}
-
-.slick__text-thumb {
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 43px;
-  padding-bottom: 26px;
-  padding-right: 50px;
-  padding-left: 50px;
-
-  background-color: #fafafa;
-
+  &__image {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 29px;
+    width: 85px;
+    height: 85px;
+  
+    @media screen and (min-width: 768px) {
+        margin-bottom: 19px;
+      }
+  
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 15px;
+      }
+    }
+  
+  &__text-thumb {
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 43px;
+    padding-bottom: 26px;
+    padding-right: 50px;
+    padding-left: 50px;
+    background-color: #fafafa;
+  
   @media screen and (min-width: 768px) {
     margin-bottom: 24px;
     padding-top: 47px;
     padding-bottom: 34px;
     padding-right: 36px;
     padding-left: 60px;
-  }
-
+    }
+  
   @media screen and (min-width: 1200px) {
     margin-bottom: 34px;
     padding-top: 47px;
     padding-bottom: 39px;
     padding-right: 54px;
     padding-left: 59px;
+    }
+   }
+
+  &__text {
+    position: relative;
+    z-index: 2;
+  
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 2.58;
+    color: #000000;
+  
+    text-align: center;
+    letter-spacing: 0.04em;
+  
+    background-image: repeating-linear-gradient(to top,
+        #e1e1e1,
+        #e1e1e1 1px,
+        #fafafa 1px,
+        #fafafa 31px);
+  
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 2.14;
+  
+      background-image: repeating-linear-gradient(to top,
+          #e1e1e1,
+          #e1e1e1 1px,
+          #fafafa 1px,
+          #fafafa 30px);
+    }
+  
+    @media screen and (min-width: 1200px) {
+      font-size: 16px;
+      line-height: 1.88;
+  
+      background-image: repeating-linear-gradient(to top,
+          #e1e1e1,
+          #e1e1e1 1px,
+          #fafafa 1px,
+          #fafafa 30.5px);
+    }
   }
-}
 
-.slick__image {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 29px;
-  width: 85px;
-  height: 85px;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 19px;
+  &__text::before {
+    content: '';
+    position: absolute;
+    top: -14px;
+    left: -32px;
+    width: 54px;
+    height: 40px;
+    background-image: url(../images/slider/“.svg);
+    z-index: -1;
+  
+    @media screen and (min-width: 768px) {
+      top: -16px;
+      left: -31px;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      top: -14px;
+      left: -38px;
+    }
   }
 
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 15px;
-  }
-}
-
-.slick__label {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 30px;
-  font-family: 'DM Sans',
-    sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.86;
-  color: #000000;
-  text-align: center;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 35px;
-    font-size: 16px;
-    line-height: 1.88;
+  &__text::after {
+    content: '';
+  
+    position: absolute;
+    bottom: -48px;
+    left: 45%;
+    width: 32px;
+    height: 4px;
+  
+    background-image: url(../images/slider/dots.svg);
+  
+    @media screen and (min-width: 768px) {
+      top: 135px;
+      left: 44%;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      top: 120px;
+      left: 47%;
+    }
   }
 
-  @media screen and (min-width: 1200px) {
-    font-size: 20px;
-    line-height: 1.85;
+  &__label {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 30px;
+    font-family: 'DM Sans',
+      sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.86;
+    color: #000000;
+    text-align: center;
+  
+    @media screen and (min-width: 768px) {
+      margin-bottom: 35px;
+      font-size: 16px;
+      line-height: 1.88;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      font-size: 20px;
+      line-height: 1.85;
+    }
   }
-}
 
-// Slider styles //
-.slick-list {
-  overflow: hidden;
-}
+  .slick-dots {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.slick-track {
-  display: flex;
-  align-items: flex-start;
-}
+  .slick-dots li {
+    list-style: none;
+  }
 
-.slick__slider .slick-dots {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .slick-dots li:not(:first-child) button {
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #d9d9d9;
+    border: none;
+    border-radius: 50%;
+    margin-right: 18px;
+  }
 
-.slick__slider .slick-dots li {
-  list-style: none;
-}
+  .slick-dots li.slick-active button {
+    background-color: #d31342;
+  }
 
-.slick__slider .slick-dots li:not(:first-child) button {
-  font-size: 0;
-  width: 12px;
-  height: 12px;
-  background-color: #d9d9d9;
-  border: none;
-  border-radius: 50%;
-  margin-right: 18px;
-}
-
-.slick__slider .slick-dots li.slick-active button {
-  background-color: #d31342;
-}
-
-.slick__slider .slick-dots li:first-child button {
+  .slick-dots li:first-child button {
   font-size: 0;
   width: 13px;
   height: 12px;
@@ -231,9 +207,9 @@
   border: none;
   margin-right: 18px;
   background-color: transparent;
-}
+  }
 
-.slick__slider .slick-dots li.slick-active:first-child button {
+.slick-dots li.slick-active:first-child button {
   font-size: 0;
   width: 13px;
   height: 12px;
@@ -244,4 +220,15 @@
   border: none;
   margin-right: 18px;
   background-color: transparent;
+}
+
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-track {
+  display: flex;
+  align-items: flex-start;
 }
