--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1506,109 +1506,44 @@ body {
   width: 100%;
 }
 
+.slick-slider {
+  padding-top: 80px;
+  padding-bottom: 170px;
+  background-color: #fff;
+}
 @media screen and (min-width: 768px) {
-  .slick__container {
+  .slick-slider {
+    padding-top: 121px;
     padding-left: 40px;
     padding-right: 40px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .slick__container {
+  .slick-slider {
+    padding-top: 120px;
     padding-left: 63px;
     padding-right: 61px;
   }
 }
 
-.slick {
-  padding-top: 80px;
-  padding-bottom: 170px;
-  background-color: #ffffff;
+.slick__image {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 29px;
+  width: 85px;
+  height: 85px;
 }
 @media screen and (min-width: 768px) {
-  .slick {
-    padding-top: 121px;
-    padding-bottom: 197px;
+  .slick__image {
+    margin-bottom: 19px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .slick {
-    padding-top: 120px;
-    padding-bottom: 237px;
+  .slick__image {
+    margin-bottom: 15px;
   }
 }
-
-.slick__text {
-  position: relative;
-  z-index: 2;
-  font-family: "DM Sans", sans-serif;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 2.58;
-  color: #000000;
-  text-align: center;
-  letter-spacing: 0.04em;
-  background-image: repeating-linear-gradient(to top, #e1e1e1, #e1e1e1 1px, #fafafa 1px, #fafafa 31px);
-}
-@media screen and (min-width: 768px) {
-  .slick__text {
-    font-size: 14px;
-    line-height: 2.14;
-    background-image: repeating-linear-gradient(to top, #e1e1e1, #e1e1e1 1px, #fafafa 1px, #fafafa 30px);
-  }
-}
-@media screen and (min-width: 1200px) {
-  .slick__text {
-    font-size: 16px;
-    line-height: 1.88;
-    background-image: repeating-linear-gradient(to top, #e1e1e1, #e1e1e1 1px, #fafafa 1px, #fafafa 30.5px);
-  }
-}
-
-.slick__text::before {
-  content: "";
-  position: absolute;
-  top: -14px;
-  left: -32px;
-  width: 54px;
-  height: 40px;
-  background-image: url(../images/slider/“.svg);
-  z-index: -1;
-}
-@media screen and (min-width: 768px) {
-  .slick__text::before {
-    top: -16px;
-    left: -31px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .slick__text::before {
-    top: -14px;
-    left: -38px;
-  }
-}
-
-.slick__text::after {
-  content: "";
-  position: absolute;
-  bottom: -48px;
-  left: 45%;
-  width: 32px;
-  height: 4px;
-  background-image: url(../images/slider/dots.svg);
-}
-@media screen and (min-width: 768px) {
-  .slick__text::after {
-    top: 135px;
-    left: 44%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .slick__text::after {
-    top: 120px;
-    left: 47%;
-  }
-}
-
 .slick__text-thumb {
   margin-bottom: 30px;
   margin-left: auto;
@@ -1637,26 +1572,75 @@ body {
     padding-left: 59px;
   }
 }
-
-.slick__image {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 29px;
-  width: 85px;
-  height: 85px;
+.slick__text {
+  position: relative;
+  z-index: 2;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 2.58;
+  color: #000000;
+  text-align: center;
+  letter-spacing: 0.04em;
+  background-image: repeating-linear-gradient(to top, #e1e1e1, #e1e1e1 1px, #fafafa 1px, #fafafa 31px);
 }
 @media screen and (min-width: 768px) {
-  .slick__image {
-    margin-bottom: 19px;
+  .slick__text {
+    font-size: 14px;
+    line-height: 2.14;
+    background-image: repeating-linear-gradient(to top, #e1e1e1, #e1e1e1 1px, #fafafa 1px, #fafafa 30px);
   }
 }
 @media screen and (min-width: 1200px) {
-  .slick__image {
-    margin-bottom: 15px;
+  .slick__text {
+    font-size: 16px;
+    line-height: 1.88;
+    background-image: repeating-linear-gradient(to top, #e1e1e1, #e1e1e1 1px, #fafafa 1px, #fafafa 30.5px);
   }
 }
-
+.slick__text::before {
+  content: "";
+  position: absolute;
+  top: -14px;
+  left: -32px;
+  width: 54px;
+  height: 40px;
+  background-image: url(../images/slider/“.svg);
+  z-index: -1;
+}
+@media screen and (min-width: 768px) {
+  .slick__text::before {
+    top: -16px;
+    left: -31px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .slick__text::before {
+    top: -14px;
+    left: -38px;
+  }
+}
+.slick__text::after {
+  content: "";
+  position: absolute;
+  bottom: -48px;
+  left: 45%;
+  width: 32px;
+  height: 4px;
+  background-image: url(../images/slider/dots.svg);
+}
+@media screen and (min-width: 768px) {
+  .slick__text::after {
+    top: 135px;
+    left: 44%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .slick__text::after {
+    top: 120px;
+    left: 47%;
+  }
+}
 .slick__label {
   display: block;
   margin-right: auto;
@@ -1682,27 +1666,15 @@ body {
     line-height: 1.85;
   }
 }
-
-.slick-list {
-  overflow: hidden;
-}
-
-.slick-track {
-  display: flex;
-  align-items: flex-start;
-}
-
-.slick__slider .slick-dots {
+.slick .slick-dots {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.slick__slider .slick-dots li {
+.slick .slick-dots li {
   list-style: none;
 }
-
-.slick__slider .slick-dots li:not(:first-child) button {
+.slick .slick-dots li:not(:first-child) button {
   font-size: 0;
   width: 12px;
   height: 12px;
@@ -1711,12 +1683,10 @@ body {
   border-radius: 50%;
   margin-right: 18px;
 }
-
-.slick__slider .slick-dots li.slick-active button {
+.slick .slick-dots li.slick-active button {
   background-color: #d31342;
 }
-
-.slick__slider .slick-dots li:first-child button {
+.slick .slick-dots li:first-child button {
   font-size: 0;
   width: 13px;
   height: 12px;
@@ -1727,8 +1697,7 @@ body {
   margin-right: 18px;
   background-color: transparent;
 }
-
-.slick__slider .slick-dots li.slick-active:first-child button {
+.slick .slick-dots li.slick-active:first-child button {
   font-size: 0;
   width: 13px;
   height: 12px;
@@ -1738,6 +1707,15 @@ body {
   border: none;
   margin-right: 18px;
   background-color: transparent;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-track {
+  display: flex;
+  align-items: flex-start;
 }
 
 .contacts-section {
