--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,10 +1,7 @@
 <section class="slick-slider">
   <div class="container">
-    <h2 class="slick__title visually-hidden" id="customer-reviews">
-      Customer reviews Rafał Pawlak
-    </h2>
+    <h2 class="slick__title visually-hidden" id="customer-reviews">Customer reviews</h2>
     <ul class="slick">
-      <!--slick__slider-->
       <li class="slick__item">
         <img
           class="slick__image"
